--- a/build.gradle
+++ b/build.gradle
@@ -65,9 +65,9 @@ dependencies {
     minecraft "net.minecraftforge:forge:${forge_version}"
     compile files("libs/SteveKunG's-Lib-${mc_version}-${stevekung_lib_version}-deobf.jar")
     compile files("libs/Indicatia-${mc_version}-${indicatia_version}-deobf.jar")
-    embed("org.apache.commons:commons-text:1.8") {
+    /*embed("org.apache.commons:commons-text:1.8") {
         exclude group: "org.apache.commons", module: "commons-lang3"
-    }
+    }*/
 }
 
 repositories {
@@ -88,10 +88,10 @@ sourceSets {
 }
 
 reobf {
-    shadowJar {
+    /*shadowJar {
         dependsOn tasks.createMcpToSrg
         mappings = tasks.createMcpToSrg.outputs.files.singleFile
-    }
+    }*/
 }
 
 jar {
