--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@ buildscript {
     repositories {
         maven { url "https://files.minecraftforge.net/maven" }
         maven { url "https://repo.spongepowered.org/maven" }
-        jcenter()
+        gradlePluginPortal()
         mavenCentral()
     }
     dependencies {
-        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "3.+", changing: true
+        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "4.1.+", changing: true
         classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.4.0"
         classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
-        classpath "com.github.jengelman.gradle.plugins:shadow:4.0.4"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.0.0"
     }
 }
 
@@ -72,10 +72,6 @@ dependencies {
 
 repositories {
     maven {
-        name "CurseGradle"
-        url "https://plugins.gradle.org/m2/"
-    }
-    maven {
         name "Shadow"
         url "https://jitpack.io"
     }
@@ -97,7 +93,7 @@ reobf {
 jar {
     manifest {
         attributes([
-            "MixinConnector": "com.stevekung.originatia.core.OriginatiaMixinConnector",
+            "MixinConfigs": "mixins.originatia.json",
             "Implementation-Title": "${archivesBaseName}",
             "Implementation-Version": "${version}",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
@@ -122,7 +118,7 @@ task deobfJar(type: Jar) {
     }
     manifest {
         attributes([
-            "MixinConnector": "com.stevekung.originatia.core.OriginatiaMixinConnector",
+            "MixinConfigs": "mixins.originatia.json",
             "Implementation-Title": "${archivesBaseName}",
             "Implementation-Version": "${version}",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
