Clean up some features

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license="MIT License"
 modId="originatia"
 version="${file.jarVersion}"
 displayName="Originatia"
-description="Improves Origin Realms gameplay, Block Sounds fixes and more!"
+description="A small mod that improves Origin Realms gameplay, Block Sounds fixes and more!"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/originatia"
 updateJSONURL="https://raw.githubusercontent.com/SteveKunG/VersionCheckLibrary/master/originatia_version.json"
 authors="SteveKunG"
