--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ shadowJar {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${forge_version}"
+    annotationProcessor "org.spongepowered:mixin:0.8.2:processor"
     compile files("libs/SteveKunG's-Lib-${mc_version}-${stevekung_lib_version}-deobf.jar")
     compile files("libs/Indicatia-${mc_version}-${indicatia_version}-deobf.jar")
     /*embed("org.apache.commons:commons-text:1.8") {
