Port to architectury

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,16 @@
 mc_version=1.16.5
-forge_version=1.16.5-36.1.2
-stevekung_lib_version=4.0.4
-indicatia_version=4.0.4
-version=0.0.3
-mcp_mapping=20210309-1.16.5
+archives_base_name=Originatia
+mod_version=0.1.0
+maven_group=com.stevekung.originatia
+architectury_version=1.10.139
+
+# fabric
+stevekung_lib_fabric_deobf=3239044
+fabric_loader_version=0.11.3
+fabric_api_version=0.32.5+1.16
+modmenu_version=1.16.8
+cloth_config_version=4.11.15
+
+# forge
+forge_version=36.1.2
+stevekung_lib_forge_deobf=3239040
