--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 # folder
-.gradle
 .settings
-.sba
+.gradle
+.idea
+.vscode
 bin
 build
 libs
-eclipse
 run
 
 # file
 *.bat
 *.launch
+.metadata
 .classpath
 .project
 !gradlew.bat
