--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -62,6 +62,9 @@ shadowJar {
 }
 
 sourcesJar {
+    def commonSources = project(":common").sourcesJar
+    dependsOn commonSources
+    from commonSources.archiveFile.map { zipTree(it) }
     classifier "source"
     version "v${project.version}"
     baseName fileName
