--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -33,3 +33,10 @@ mandatory = true
 versionRange = "[4.1.1,)"
 ordering = "NONE"
 side = "CLIENT"
+
+[[dependencies.originatia]]
+modId = "architectury"
+mandatory = true
+versionRange = "[1.8.131,)"
+ordering = "NONE"
+side = "CLIENT"
