--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -12,8 +12,17 @@ architectury {
     forge()
 }
 
+def username = project.username
+def password = project.password
+
 loom {
     mixinConfigs = ["mixins.originatia.json", "mixins.originatia_forge.json"]
+
+    launches {
+        client {
+            arg "--username", username, "--password", password
+        }
+    }
 }
 
 dependencies {
